feat: Add spinner and "loading" status on click

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                 <div id="kmHelp" class="form-text">Deve essere un numero maggiore di 0</div>
             </div>
 
-            <button type="submit" class="btn btn-danger">Conferma</button>
-
+            <button class="btn btn-danger" type="submit">
+                <span id="spinner" class="d-none spinner-border spinner-border-sm" aria-hidden="true"></span>
+                <span class="status" role="status">Conferma</span>
+            </button>
         </form>
 
     </main>
