feat: Add modal

--- a/index.html
+++ b/index.html
@@ -27,11 +27,32 @@
                 <div id="kmHelp" class="form-text">Deve essere un numero maggiore di 0</div>
             </div>
 
-            <button class="btn btn-danger" type="submit">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 <span id="spinner" class="d-none spinner-border spinner-border-sm" aria-hidden="true"></span>
                 <span class="status" role="status">Conferma</span>
             </button>
+        
         </form>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Prezzo</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Vai al carrello</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
