--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Prezzo</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div id="price" class="modal-body">
                     
                     </div>
                     <div class="modal-footer">
