feat: Add comments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <main class="container">
 
+        <!--Form-->
         <form class="pt-3">
 
             <div class="mb-3">
@@ -32,8 +33,10 @@
                 <span id="spinner" class="d-none spinner-border spinner-border-sm" aria-hidden="true"></span>
                 <span class="status" role="status">Conferma</span>
             </button>
+            <!--End-->
         
         </form>
+        <!--End-->
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -53,6 +56,7 @@
                 </div>
             </div>
         </div>
+        <!--End-->
 
     </main>
 
