fix: Edit modal button color

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Prezzo</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div id="price" class="modal-body">
                     
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Vai al carrello</button>
+                        <button type="button" class="btn btn-danger">Vai al carrello</button>
                     </div>
                 </div>
             </div>
