feat: Button returns to original state once close-button or shopping-cart-button are clicked

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-danger">Vai al carrello</button>
+                        <button type="button" id="close-button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" id="shopping-cart-button" class="btn btn-danger">Vai al carrello</button>
                     </div>
                 </div>
             </div>
