fix: Edit if/else if/else

--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
         <!--End-->
 
         <!-- Modal -->
-        <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Prezzo</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div id="price" class="modal-body">
                     
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="close-button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" id="shopping-cart-button" class="btn btn-danger">Vai al carrello</button>
+                        <button type="button" id="shopping-cart-button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                        <button type="button" id="close-button" class="btn btn-danger">Vai al carrello</button>
                     </div>
                 </div>
             </div>
