--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Riepilogo</h1>
+                        <h1 class="modal-title fs-5" id="modal-title">Riepilogo</h1>
                         <button type="button" id="x-close-button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div id="price" class="modal-body">
                     
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="shopping-cart-button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
-                        <button type="button" id="close-button" class="btn btn-danger">Vai al carrello</button>
+                        <button type="button" id="close-button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                        <a href="./shopping-cart.html" target="_blank" type="button" id="shopping-cart-button" class="btn btn-danger">Vai al carrello</a>
                     </div>
                 </div>
             </div>
